<resources>
    <string name="app_name">PasswordMemo</string>
    <string name="version">Ver</string>
    <string name="login">login</string>
    <string name="biometrics">biometrics</string>
    <string name="input_password">Enter password</string>
    <string name="new_password">Create a new password</string>
    <string name="err_empty">Password is empty</string>
    <string name="err_input_same">Enter the same password again</string>
    <string name="err_input_different">Try again because the password you entered is different</string>
    <string name="err_incorrect">The password is incorrect</string>
    <string name="err_incorrect_num_front">The password is incorrect(</string>
    <string name="err_incorrect_num_back"> th time)</string>
    <string name="err_delete_all">Delete all data</string>
    <string name="login_biometrics">Biometrics login</string>
    <string name="login_biometrics_message">Login using your biometric information</string>
    <string name="cancel">cancel</string>
    <string name="err_authentication_message">authentication error: </string>
    <string name="err_authentication_failure">authentication failure</string>
    <string name="login_success">Logging in...</string>
    <string name="review_dialig_title">Please rate for Password Memo!</string>
    <string name="review_dialig_message">Thank you for using Password Memo. It will be an encouragement to continue improving the app so that it is easy to use.</string>
    <string name="review_dialig_rate">Rate password memo</string>
    <string name="review_dialig_rate_later">Remind me later</string>
    <string name="review_dialig_rate_cancel">Do not rate</string>
    <string name="logout">logout</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="list_title">All</string>
    <string name="group_title">Group list</string>
    <string name="group_title_select">(Select)</string>
    <string name="group_title_edit">(Edit)</string>
    <string name="sort_name_default">default</string>
    <string name="sort_name_title">title</string>
    <string name="sort_name_update">update</string>
    <string name="end">end</string>
    <string name="add">add</string>
    <string name="setting">settings</string>
    <string name="copy">copy</string>
    <string name="copy_title">copy</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="delete_title_head">"</string>
    <string name="delete_title">" will be deleted.</string>
    <string name="delete_message">Is it OK?</string>
    <string name="delete_execute">Execute</string>
    <string name="delete_cancel">Cancel</string>
    <string name="search_text_message">Enter search text</string>
    <string name="no_select_menu_icon">-</string>
    <string name="select_menu_icon">+</string>
    <string name="search_title">Search Bar</string>
    <string name="edit_mode">- Switch edit mode (default)</string>
    <string name="sort_operation">Sort</string>
    <string name="sort_default">- Sort (default order)</string>
    <string name="sort_title">- Sort (title order)</string>
    <string name="sort_update">- Sort (update order)</string>
    <string name="select_group">Edit group</string>
    <string name="setting_menu">Settings</string>
    <string name="empty_prompt_message">Register your password from the bottom right button</string>
    <string name="registration_coach_mark">Register here</string>
    <string name="back">back</string>
    <string name="title_top">Title</string>
    <string name="create_new">Create new</string>
    <string name="ok">OK</string>
    <string name="color">Color</string>
    <string name="title">Title</string>
    <string name="account_id">Account ID</string>
    <string name="password">Password</string>
    <string name="url">URL</string>
    <string name="group">Group</string>
    <string name="enter_memo_message">Enter memo</string>
    <string name="copy_clipboard_success">Copied to clipboard</string>
    <string name="copy_clipboard_failure">Copy to clipboard failed</string>
    <string name="error_starting_app">Could not start app.</string>
    <string name="error_opening_url">Could not open URL.</string>
    <string name="choose_browser">Select</string>
    <string name="generate_password">Generate password</string>
    <string name="generate_password_title">Password generation</string>
    <string name="character_type">Character type</string>
    <string name="character_count">Character count</string>
    <string name="numbers_only">Numbers only</string>
    <string name="letters_numbers">Letters + Numbers</string>
    <string name="letters_numbers_symbols">Letters + Numbers + Symbols</string>
    <string name="lower_case_only">Lower case only</string>
    <string name="apply">Apply</string>
    <string name="data_deletion_enable">Data deletion</string>
    <string name="data_deletion_enable_message">Delete the password if you make a mistake 5 times</string>
    <string name="login_biometrics_enable">Biometrics login</string>
    <string name="login_biometrics_enable_message">Use biometrics to enable login</string>
    <string name="display_background_enable">Hide settings in the background</string>
    <string name="display_background_enable_message">Hide the screen and log out after a while</string>
    <string name="memo_visible_enable">Display memo</string>
    <string name="memo_visible_enable_message">Display the memo on password list screen</string>
    <string name="password_visible_enable">Display password</string>
    <string name="password_visible_enable_message">Initial display of password field on reference screen</string>
    <string name="autofill_setting">Autofill settings</string>
    <string name="autofill_setting_paid">Autofill settings (Paid)</string>
    <string name="autofill_setting_message">Set up automatic entry of ID and password</string>
    <string name="text_size">Change text size</string>
    <string name="text_size_message">Change the text size of this app</string>
    <string name="copy_clipboard">How to copy password</string>
    <string name="copy_clipboard_message">Setting how to copy to clipboard</string>
    <string name="db_input_output">Backup/Restore DB file</string>
    <string name="db_input_output_message">Input / Output password data to DB file</string>
    <string name="csv_input_output">Input/Output CSV file</string>
    <string name="csv_input_output_message">Input / Output password data to CSV file</string>
    <string name="chrome_csv_input_output">ChromeCSV file input/output</string>
    <string name="chrome_csv_input_output_message">Import/output CSV data in Chrome format</string>
    <string name="select_input_output">Select</string>
    <string name="select_input_output_paid">Select (Paid)</string>
    <string name="csv_output">Output CSV file</string>
    <string name="csv_output_message">Output password data to CSV file</string>
    <string name="select_color">Background color</string>
    <string name="select_color_message">Change background color</string>
    <string name="output">output</string>
    <string name="change_master_password">Change master password</string>
    <string name="change_master_password_message">Change master password at login</string>
    <string name="dark_mode">Dark mode</string>
    <string name="dark_mode_message">Configure dark mode ON/OFF and automatic application</string>
    <string name="dark_mode_off">OFF</string>
    <string name="dark_mode_on">ON</string>
    <string name="dark_mode_auto">AUTO</string>
    <string name="operation_instruction">Operating instructions</string>
    <string name="operation_instruction_message">Show a brief operating instructions of this app.</string>
    <string name="close">Close</string>
    <string name="rate">Rate Password Memo</string>
    <string name="rate_message">Rate this app on Google Play Store</string>
    <string name="rate_url">https://play.google.com/store/apps/details?id=com.highcom.passwordmemo</string>
    <string name="license">View license</string>
    <string name="license_message">View the OSS license used by this app</string>
    <string name="operation_message">* This instructions can also be referred later from the setting screen.</string>
    <string name="operation_add">Create new</string>
    <string name="operation_add_instruction">First, tap the new button at the bottom right of the screen to create a new memo.</string>
    <string name="operation_copy">Reference and Copy</string>
    <string name="operation_copy_instruction">You can copy it to the clipboard by referring to the created data and long-pressing the account ID or password.</string>
    <string name="operation_copy_disp_instruction">At the bottom of the screen, you will see that it has been copied to the clipboard.</string>
    <string name="operation_edit_delete">Duplicate and Edit and Delete</string>
    <string name="operation_edit_delete_instruction">Swipe the target line to the left to display the duplicate and edit and delete buttons.</string>
    <string name="operation_sort">Sort</string>
    <string name="operation_sort_instruction">Select the edit mode switch of the menu button on the upper right to switch to edit mode.</string>
    <string name="operation_sort_disp_instruction">You can move it to the desired position by long-pressing the handle icon and then dragging it.</string>
    <string name="operation_group">Select group</string>
    <string name="operation_group_instruction">Selecting the burger menu on the top left will open the drawer screen.</string>
    <string name="operation_group_disp_instruction">Groups can be switched by selecting from the group list displayed on the drawer screen.</string>
    <string name="operation_group_edit">Edit group</string>
    <string name="operation_group_edit_instruction">Select edit group from the menu button on the upper right to move to the group edit screen.</string>
    <string name="operation_group_edit_disp_instruction">Groups can be added or edited from the group edit screen.</string>
    <string name="about_membership_title_monthly_half_yearly">Monthly/Half-yearly/Yearly membership plan</string>
    <string name="about_membership_desc_monthly_half_yearly">- Ads will be hidden on all screens.\n- Unlimited additional registrations even if the registered data exceeds 100.\n- Password autofill settings will be unlocked.\n- CSV file import/export function will be unlocked.</string>
    <string name="about_membership_title_remove_ads">Hide ads (one-time purchase)</string>
    <string name="about_membership_desc_remove_ads">- A single purchase will permanently hide ads only.</string>
    <string name="autofill_setting_description_1">1. Change settings</string>
    <string name="autofill_setting_description_2">Settings app\n -> Passwords and accounts\n -> Preferred service\n -> to Password Memo</string>
    <string name="autofill_setting_description_3">2. Change Chrome browser</string>
    <string name="autofill_setting_description_4">Chrome settings\n -> Autofill service\n -> Select Autofill using another service</string>
    <string name="autofill_setting_annotation">*May not work depending on the site</string>
</resources>