<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/title_monthly_half_yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/about_membership_title_monthly_half_yearly" />

        <TextView
            android:id="@+id/desc_monthly_half_yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:textSize="14sp"
            android:text="@string/about_membership_desc_monthly_half_yearly" />

        <TextView
            android:id="@+id/title_remove_ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/about_membership_title_remove_ads" />

        <TextView
            android:id="@+id/desc_remove_ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:textSize="14sp"
            android:text="@string/about_membership_desc_remove_ads" />

    </LinearLayout>
</ScrollView>