<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/character_type" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/character_count" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/passwordKindMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <RadioButton
                        android:id="@+id/radioNumbers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/numbers_only" />
                    <RadioButton
                        android:id="@+id/radioLettersNumbers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/letters_numbers" />
                    <RadioButton
                        android:id="@+id/radioLettersNumbersSymbols"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/letters_numbers_symbols" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/lowerCaseOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/lower_case_only" />
            </LinearLayout>

            <NumberPicker
                android:id="@+id/passwordNumberPicker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/generatePasswordText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="10dp"
                android:textSize="16dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:focusable="false" />

            <ImageButton
                android:id="@+id/generateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@layout/round_button"
                android:src="@drawable/ic_baseline_autorenew_24" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>